tests/ui/bad_value4.rs
// Copyright 2020 Oxide Computer Company

use testlib::annotation;

#[annotation {
    options = NoneOfTheAbove
}]
fn test() {}

fn main() {}
